objects/Part_Selector_Insulation_OD__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>End_Range__c</fullName>
        <label>End Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Range__c</fullName>
        <label>Start Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage__c</fullName>
        <label>Voltage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part Selector Insulation OD</label>
</CustomObject>